# data-engineer-essential-code

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
00_bash_basics/: .gitignore  README.md
00_bash_basics/01_basics/: hello.txt  system_info.txt
00_bash_basics/03_file_management/raw/: customer.csv  product.csv  sales.csv
00_bash_basics/04_viewing_files/: big_file.csv  config.json
00_bash_basics/05_searching/documents/: notes.txt  requirement.txt
00_bash_basics/06_pipe_redirect/input/: users.csv
00_bash_basics/06_pipe_redirect/output/: report.txt
00_bash_basics/07_environment/: env_example.txt
00_bash_basics/07_environment/scripts/: config.sh  run_pipeline.sh
00_bash_basics/mini_incident/solution/: incident_report.txt
01_python_basics/: PYTHON.md
02_working_with_data/01_pandas/: 01_pandas.ipynb
03_data_sources/01_files/: work_with_avro.py  work_with_csv.py  work_with_json.py  work_with_parquet.py  work_with_text.py  work_with_xml.py
03_data_sources/01_files/exercise/: exercise.py
03_data_sources/02_apis/: work_with_api.py
03_data_sources/03_databases/: work_with_db.py
04_data_storage/02_data_lake/: rustfs_example.py
04_data_storage/03_data_warehouse/: clickhouse_example.py
05_data_ingestion/01_to_database/: load_to_database.py
05_data_ingestion/02_to_data_lake/: load_to_lake.py
05_data_ingestion/03_to_lakehouse/: load_to_lakehouse.py
datasets/: generate_raw_data.py
datasets/raw/: addresses_raw.csv  order_items_raw.csv  orders_raw.csv  products_raw.csv  transports_raw.csv  users_raw.csv
(+10 files in other folders)
