[project]
name = "data-engineer-essential-code"
version = "0.1.0"
description = "Structured learning codebase for a Data Engineer Essentials course"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "clickhouse-connect>=0.8.0",
    "boto3>=1.28.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "python-dotenv>=1.0.0",
    "deltalake>=0.14.0",
    "duckdb>=0.9.0",
    "pyarrow>=24.0.0",
    "fastavro>=1.12.2",
    "lxml>=6.1.1",
]
